# LeftyBot

./: main.py  pyproject.toml
languages/: languages.json
