[tool.poetry]
name = "tragicentireapplicationprogrammer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
youtube-dl = "^2020.7.28"
async-timeout = "^3.0.1"
PyNaCl = "^1.4.0"
pymongo = "^4.0.1"
validators = "^0.18.2"
nextcord = "^2.0.0-alpha.3"
yt-dlp = "^2021.12.1"
srv = "^1.1.0"
dnspython = "^2.1.0"
replit = "^3.2.4"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
